# dark-agency-simulations-cpp

./: .gitignore  CMakeLists.txt  README.md
notebooks/: RAE_Organizational_Viz.py  run_magic.py
src/bindings/: pybind_sim.cpp
src/engine/: agent.hpp  main.cpp
